--- a/style.css
+++ b/style.css
@@ -6,14 +6,15 @@
   padding: 10rem 0;
 }
 
-body{
+body {
   background-color: #ffffff;
 }
 .bgimage {
   height: 100vh;
-  position: relative;
+  position:relative;
   background: url("img/fundofreepik.jpg");
   background-size: cover;
+  max-block-size: 100%;
 }
 .heroTitle {
   font-size: 3rem;
@@ -23,7 +24,7 @@ body{
 }
 .heroText {
   text-align: center;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -66,12 +67,18 @@ body{
 .servicesText:hover {
   border: 1px solid #fb2edf;
 }
-button.navbar-toggler {
-  background-color: #7c7593;
+
+nav {
+ 
+  margin: 0 auto;
+  padding: 0 2rem;
+
 }
 
 .navbar {
   background-color: #2e0254;
+  max-width: auto;
+ 
 }
 
 .navbar a {
@@ -83,12 +90,9 @@ button.navbar-toggler {
   background-color: #ddd;
   color: rgb(21, 4, 49);
   border-radius: 4px;
+  max-width: fit-content;
 }
-.navbar-ligth {
-  color: antiquewhite;
-  border-radius: 5px;
-  background-color: #7c7593;
-}
+
 
 .contactIcon {
   font-size: 3rem;
